# Modified-Guinea-Pig

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CTestConfig.cmake  ChangeLog  Doxyfile  Makefile  Makefile.in  OUTPUT_FILES  README  README.md  config.status  configure  configure.ac  log.guinea.53653  log.guinea.56094
cmake/Modules/: FindFFTW.cmake  FindFFTW2.cmake  compilers.cmake  guinea_config.cmake  guinea_definitions.cmake
src/: CMakeLists.txt  EDMwriter.h  EDMwriterCPP.cc  IfileInputOutput.h  Makefile  Makefile.in  abstractIOclass.h  abstractParticle.h  backgroundCPP.cc  backgroundCPP.h  beamCPP.cc  beamCPP.h  beamParametersCPP.cc  beamParametersCPP.h  besselCPP.cc  besselCPP.h  bhabhaSamplesCPP.cc  bhabhaSamplesCPP.h  config.h  config.h.cmake.in  config.h.in  define.h  extraPhotonCPP.h  fieldCPP.cc  fieldCPP.h  fileInputOutput.h  fileInputOutputAscii.h  fourierCPP.cc  fourierCPP.h  gridCPP.cc  gridCPP.h  grvCPP.cc  grvCPP.h  guineapigCPP.cc  guineapigCPP.h  jetParameterCPP.cc  jetParameterCPP.h  lumiCPP.cc  lumiCPP.h  mathconst.h  (+36 more)
testing/: CMakeLists.txt  result.cfg  result.ref
